    infos provenant de git alors que le répertoire n'est pas sous
    contrôle de version
  * [DEV] Suppression des actions postrm
  * [DEV] Correction de bug d'affichages + suppression de commandes
    postinst problématiques
  * [DEV] Version 1.0
  * [DEV] Correction bug d'un test
  * [DEV] Mis en veille des commandes non utilisées
  * [DEV] Commit -- 10/10/2016 @ 10:07:13
  * [DEV] Modifications permettant d'utiliser /env dans /opt/inist-tools
    comme répertoire persistant pour l'environnement de l'appli
  * [DEV] Ajout de /env à .gitignore
  * [DEV] Ajout des commandes 'inist on|off'
  * [DEV] Correction du 'bug git' : ajout du test de présence du binaire
    git avant d'accepter de le paramétrer
  * [DEV] Réorg et complémentation de l'aide, conserver les paquets .deb
    au fil du temps, homogéinité du design
  * [DEV] Ajout de inist st|status + autocomplete correspondant
  * [DEV] Ajout de inist st|status + autocomplete correspondant -- màj
    aide
  * [DEV] Correction d'un bug sur la gestion du proxy pour 'docker off'
    + ajout des infos utilisateurs sur l'état d'activation/désactivation
    du daemon docker
  * [DEV] Ajout de la fonctionnalité d'installation de docker sur Ubuntu
    et Debian
  * [DEV] Correction du bug d'install de docker
  * [DEV] Correction du bug d'install de docker - bis
  * [DEV] Correction du bug d'install de docker - ter
  * [DEV] Correction d'un bug àlc pour un ';' manquant...
  * [DEV] Correction du test de la présence de docker
  * [DEV] Correction de l'installeur docker
  * [DEV] Correction de l'installeur docker - bis
  * [DEV] Correction de l'installeur docker - ter
  * [DEV] Correction de l'installeur docker - pfff
  * [DEV] Modification des modalités de sortie de l'installeur docker
  * [DEV] Correction d'un problème d'accès aux commandes inist-tools en
    tant que root

 -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200