@@ -97,5 +97,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
   * [DEV] Modification des modalités de sortie de l'installeur docker
   * [DEV] Correction d'un problème d'accès aux commandes inist-tools en
     tant que root
+  * [DEV] Ajout de l'executable 'inistexec' dans le paquet distribué
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
